--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
     "react-scripts": "2.1.3",
     "reactstrap": "^7.0.2"
   },
+  "devDependencies": {
+    "babel-jest": "^21.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.3",
+    "jest": "^21.2.1",
+    "react-test-renderer": "^16.0.0"
+  }
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
