--- a/package.json
+++ b/package.json
@@ -7,20 +7,14 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "dotenv": "^6.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-test-renderer": "^16.8.2",
     "reactstrap": "^7.0.2"
-  },
-  "devDependencies": {
-    "babel-jest": "^21.2.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.3",
-    "jest": "^21.2.1",
-    "react-test-renderer": "^16.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
