--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "enzyme-adapter-react-16": "^1.9.1",
     "react": "^16.7.0",
     "react-cookie": "^3.0.8",
+    "react-datepicker": "^2.2.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
