--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "dotenv": "^6.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "jquery": "^3.3.1",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-cookie": "^3.0.8",
     "react-datepicker": "^2.2.0",
     "react-dom": "^16.7.0",
