--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^2.4.2",
     "react-test-renderer": "^16.8.2",
     "reactstrap": "^7.0.2"
   },
