--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "jquery": "^3.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-cookie": "^3.0.8",
