--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-test-renderer": "^16.8.2",
-    "reactstrap": "^7.0.2"
+    "reactstrap": "^7.0.2",
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
