--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "react-select": "^2.4.2",
     "react-test-renderer": "^16.8.2",
     "reactstrap": "^7.0.2",
+    "recharts": "^1.5.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
-    "recharts": "^1.5.0"
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
