--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "enzyme-adapter-react-16": "^1.9.1",
     "jquery": "^3.3.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.4.2",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-cookie": "^3.0.8",
